--- a/trunk/prototype/Protobi/Protobi/Protobi.csproj
+++ b/trunk/prototype/Protobi/Protobi/Protobi.csproj
@@ -9,6 +9,25 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Protobi</RootNamespace>
     <AssemblyName>Protobi</AssemblyName>
+    <ManifestCertificateThumbprint>BEDE3D2D9D8F90903BAA02269D82C7EF9943CB34</ManifestCertificateThumbprint>
+    <ManifestKeyFile>Protobi_TemporaryKey.pfx</ManifestKeyFile>
+    <GenerateManifests>true</GenerateManifests>
+    <TargetZone>LocalIntranet</TargetZone>
+    <SignManifests>true</SignManifests>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationVersion>0.1.1.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
+    <StartupObject>Protobi.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -37,14 +56,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Command.cs" />
-    <Compile Include="Commands.cs" />
-    <Compile Include="ContainerStrip.cs" />
-    <Compile Include="ContainerStripUserControl.cs">
+    <Compile Include="AudioStrip.cs" />
+    <Compile Include="AudioStripUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ContainerStripUserControl.Designer.cs">
-      <DependentUpon>ContainerStripUserControl.cs</DependentUpon>
+    <Compile Include="AudioStripUserControl.Designer.cs">
+      <DependentUpon>AudioStripUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Command.cs" />
+    <Compile Include="Commands.cs" />
+    <Compile Include="Metadata.cs" />
+    <Compile Include="MetadataInfoPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MetadataInfoPanel.Designer.cs">
+      <DependentUpon>MetadataInfoPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MetadataDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MetadataDialog.Designer.cs">
+      <DependentUpon>MetadataDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ParStrip.cs" />
+    <Compile Include="ParStripUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ParStripUserControl.Designer.cs">
+      <DependentUpon>ParStripUserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Localizer.cs" />
     <Compile Include="messages.Designer.cs">
@@ -58,6 +97,13 @@
     <Compile Include="RenameStripBox.Designer.cs">
       <DependentUpon>RenameStripBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="SeqStrip.cs" />
+    <Compile Include="SeqStripUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SeqStripUserControl.Designer.cs">
+      <DependentUpon>SeqStripUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Strip.cs">
     </Compile>
     <Compile Include="StripUserControl.cs">
@@ -67,6 +113,21 @@
       <DependentUpon>StripUserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="StripManager.cs" />
+    <Compile Include="StructureItem.cs" />
+    <Compile Include="StructureItemDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StructureItemDialog.Designer.cs">
+      <DependentUpon>StructureItemDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StructureStrip.cs" />
+    <Compile Include="WaveFile.cs" />
+    <Compile Include="WavePanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="WavePanel.Designer.cs">
+      <DependentUpon>WavePanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="WorkAreaForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,9 +136,21 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="ContainerStripUserControl.resx">
+    <EmbeddedResource Include="AudioStripUserControl.resx">
       <SubType>Designer</SubType>
-      <DependentUpon>ContainerStripUserControl.cs</DependentUpon>
+      <DependentUpon>AudioStripUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MetadataInfoPanel.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>MetadataInfoPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MetadataDialog.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>MetadataDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ParStripUserControl.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>ParStripUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="messages.ja.resx">
       <SubType>Designer</SubType>
@@ -96,9 +169,25 @@
       <SubType>Designer</SubType>
       <DependentUpon>RenameStripBox.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="SeqStripUserControl.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>SeqStripUserControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StripUserControl.resx">
       <SubType>Designer</SubType>
       <DependentUpon>StripUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StructureItemDialog.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>StructureItemDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StructureStripUserControl.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>StructureStripUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WavePanel.resx">
+      <DependentUpon>WavePanel.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="WorkAreaForm.ja.resx">
       <SubType>Designer</SubType>
@@ -113,15 +202,30 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <BaseApplicationManifest Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Protobi_TemporaryKey.pfx" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="StructureStripUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="StructureStripUserControl.Designer.cs">
+      <DependentUpon>StructureStripUserControl.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.2.0">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 2.0</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
