--- a/trunk/UrakawaApplicationBackend/UrakawaApplicationBackend.csproj
+++ b/trunk/UrakawaApplicationBackend/UrakawaApplicationBackend.csproj
@@ -107,16 +107,6 @@
                     AssemblyName = "System.Drawing"
                     HintPath = "..\..\..\..\..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Drawing.dll"
                 />
-                <Reference
-                    Name = "mscorlib"
-                    AssemblyName = "mscorlib"
-                    HintPath = "H:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\mscorlib.dll"
-                />
-                <Reference
-                    Name = "mscorcfg"
-                    AssemblyName = "mscorcfg"
-                    HintPath = "H:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\mscorcfg.dll"
-                />
             </References>
         </Build>
         <Files>
@@ -128,6 +118,16 @@
                 />
                 <File
                     RelPath = "AssetManager.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "AudioManipulation.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "AudioMediaAsset.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
