--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -78,6 +78,10 @@
       <SubType>Designer</SubType>
       <DependentUpon>EmptyStrip.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\MetadataPanel.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>MetadataPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\StripPanel.resx">
       <SubType>Designer</SubType>
       <DependentUpon>StripPanel.cs</DependentUpon>
@@ -123,6 +127,12 @@
     </Compile>
     <Compile Include="UserControls\ContainerPanel.Designer.cs">
       <DependentUpon>ContainerPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\MetadataPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\MetadataPanel.Designer.cs">
+      <DependentUpon>MetadataPanel.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
