--- a/UrakawaApplicationBackend/UrakawaApplicationBackend.csproj
+++ b/UrakawaApplicationBackend/UrakawaApplicationBackend.csproj
@@ -132,6 +132,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "AudioPlayer.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "AudioRecorder.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
