--- a/trunk/UrakawaApplicationBackend/UrakawaApplicationBackend.csproj
+++ b/trunk/UrakawaApplicationBackend/UrakawaApplicationBackend.csproj
@@ -144,6 +144,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "AudioRecorder.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "CalculationFunctions.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
