Added Stream class for media assets.

--- a/VirtualAudioBackend/VirtualAudioBackend.csproj
+++ b/VirtualAudioBackend/VirtualAudioBackend.csproj
@@ -132,6 +132,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "AudioMediaAssetStream.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Commands.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
